# machine_learning_mvp

./: README.md  pyproject.toml  web_scraping.ipynb
.ipynb_checkpoints/: web_scraping-checkpoint.ipynb
data_cleaning/: data_cleaning.ipynb
data_cleaning/.ipynb_checkpoints/: data_cleaning-checkpoint.ipynb
mvp/: 1993.html  1995.html  1998.html  2002.html  2005.html  2009.html  2011.html  2017.html  2019.html  2022.html
player/: 1991.html  1993.html  1994.html  1995.html  1997.html  1998.html  1999.html  2000.html  2001.html  2002.html  2003.html  2005.html  2009.html  2016.html  2017.html  2019.html  2020.html  2022.html
team/: 1991.html  1993.html  1995.html  1996.html  2000.html  2003.html  2004.html  2005.html  2006.html  2008.html  2011.html  2016.html  2017.html  2019.html  2020.html  2021.html  2022.html
tutorial_directory/data_cleaning/: nicknames.csv  player_mvp_stats.csv  players.csv
tutorial_directory/data_cleaning/.ipynb_checkpoints/: data_cleaning-checkpoint.ipynb
tutorial_directory/initial_scrape/mvp/: 1991.html  1992.html  1994.html  1996.html  1997.html  1999.html  2000.html  2001.html  2003.html  2004.html  2006.html  2007.html  2008.html  2010.html  2012.html  2013.html  2014.html  2015.html  2016.html  2018.html  2020.html  2021.html
tutorial_directory/initial_scrape/player/: 1992.html  1996.html  2004.html  2006.html  2007.html  2008.html  2010.html  2011.html  2012.html  2013.html  2014.html  2015.html  2018.html  2021.html
tutorial_directory/initial_scrape/team/: 1992.html  (+14 more)
tutorial_directory/machine_learning/: player_mvp_stats.csv
(+1 files in other folders)
