[tool.poetry]
name = "nba-scraper"
version = "0.1.0"
description = ""
authors = ["krsnamara <martinj.fitzpatrick@gmail.com>"]
readme = "README.md"
packages = [{include = "nba_scraper"}]

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.9.2"
pandas = "^1.5.3"
requests = "^2.28.2"
webdriver-manager = "^3.8.5"
selenium = "^4.8.2"
matplotlib = "^3.7.0"
scikit-learn = "^1.2.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
